# Alpaca_Improved

./: .cursorrules  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  env.template  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml
docs/: INSTALLATION.md  PROJECT_STRUCTURE.md  TASKS.md
examples/: PROFITABLE_STRATEGY_SUMMARY.md
examples/backtesting/: README_ML_DAILY_TARGET_OPTIMIZER.md  aggressive_0dte_backtest.py  enhanced_risk_management_backtest.py  ma_shift_options_backtest.py  ml_daily_target_optimizer.py  ml_enhanced_backtest.py  model_comparison.py  optimized_0dte_backtest.py  optimized_baseline_backtest.py  profitable_fixed_backtest.py  real_options_data_backtest.py  realistic_ma_shift_backtest.py  scaled_baseline_backtest.py  simple_ml_demo.py  simplified_ma_shift_backtest.py  working_real_options_backtest.py
examples/paper_trading/: README.md  background_trader.py  live_0dte_paper_trader.py  ma_shift_paper_trading.py  profitable_0dte_trader.py  simple_0dte_paper_trader.py
examples/strategies/: MA_SHIFT_STRATEGY_GUIDE.md  aggressive_0dte_strategy.py  ma_shift_options_strategy.py  optimized_0dte_strategy.py  optimized_baseline_0dte.py  profitable_fixed_0dte.py  scaled_baseline_0dte.py
production/: README.md
production/live_trading/: INTEGRATION_SUMMARY.md  MARKET_OPEN_COMPARISON.md  README_ML_LIVE_TRADER.md  debug_data_accuracy.py  debug_signal_conditions.py  ml_live_options_trader_corrected.py  ml_live_paper_trader.py  ml_live_paper_trader_accurate_quotes.py  ml_live_paper_trader_final.py  ml_live_paper_trader_market_open.py  ml_live_paper_trader_ultimate.py  ml_monitoring_dashboard.py  real_paper_trader.py  start_ml_trading.py  strategy_accuracy_comparison.py  validate_ml_setup.py
src/alpaca_improved/: __init__.py  config.py
src/alpaca_improved/backtesting/: __init__.py  backtest_runner.py
src/alpaca_improved/ml/: __init__.py  trade_probability_estimator.py
src/alpaca_improved/strategies/: __init__.py  base.py  options_base.py
src/alpaca_improved/utils/: __init__.py  logger.py
src/trading/: __init__.py  paper_trading_engine.py
tests/: README.md  conftest.py
tests/fixtures/: sample_data.py
tests/integration/: test_data_extraction.py
tests/unit/test_data/: __init__.py  test_alpaca_extractor.py  test_options_extractor.py
